/*
 * $Id: ChangeLog,v 1.5787 2007/11/27 23:47:06 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-11-27 19:41 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * contrib\rdd_ads\ads1.c
    * Reinstated commented HB_ADS_SET_INIT()
      /* Can anyone please explain why was it commented? */
  * contrib\rdd_ads\adsexternal.ch
    * Commented ADSDDSETTABLEPROPERTY /* Where is such function? */
    * Added default definition #define ADS_REQUIRE_VERSION 8
  * contrib\rdd_ads\ads.ch
    * Added REQUEST ADS
  * include\hbextern.ch
    * Corrected relative path to ADS #includes
  * utils\xbscript\xbscript.prg
    * EXTERN -> REQUEST
  * hrbdll.vc
    * Corrected support for new trapkey.prg

2007-11-27 12:13 UTC+0800 Pritpal Bedi <pritpal@vouchcac.com>
  * source/rtl/gtwvt/gtwvt.h
    - Removed: void HB_EXPORT hb_wvt_gtaSetInvalidRect();.

2007-11-27 13.10 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rtl/pcre/pcre_internal.h
    ! minor fix

2007-11-27 12.15 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * include/hbexprc.c
    ! initialize vars before use (GCC)

  * contrib/wvtgui/wvtutils.c
    ! initialize vars before use (GCC)

  * contrib/wvtgui/wvtcore.c
    ! initialize vars before use (GCC)
    ! fixed GCC warning (deferencing type-punned)

  * source/pp/ppcore.c
    ! casting (GCC)

  * source/rtl/win32ole.prg
    ! intialize var before use (GCC)
    ! fixed GCC warning (deferencing type-punned)

  * source/rtl/pcre/config.h
  * source/rtl/pcre/config.h.generic
  * source/rtl/pcre/pcre.h
  * source/rtl/pcre/pcre.h.generic
  * source/rtl/pcre/pcreposix.c
  * source/rtl/pcre/pcreposix.h
  * source/rtl/pcre/pcre_chartables.c
  * source/rtl/pcre/pcre_chartables.c.dist
  * source/rtl/pcre/pcre_compile.c
  * source/rtl/pcre/pcre_config.c
  * source/rtl/pcre/pcre_dfa_exec.c
  * source/rtl/pcre/pcre_exec.c