@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5787 2007/11/27 23:47:06 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5788 2007/11/28 04:24:06 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-11-27 18.40 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
+  * source/pp/ppcore.c
+    ! fix wrong castings (should be unsugned char, was int) - Thanks Przemek.
 
 2007-11-27 19:41 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
   * contrib\rdd_ads\ads1.c
